@@ -164,6 +164,7 @@ Chronological list of authors
   - Paarth Thadani
   - Henry Kobin
   - Kosuke Kudo
+  - Sulay Shah
 
 External code
 -------------
